--- a/idefix-config.glade
+++ b/idefix-config.glade
@@ -107,7 +107,8 @@
                             <property name="can_focus">False</property>
                             <property name="label" translatable="yes">toolbutton4</property>
                             <property name="use_underline">True</property>
-                            <property name="stock_id">gtk-sort-ascending</property>
+                            <property name="stock_id">gtk-apply</property>
+                            <signal name="clicked" handler="build_proxy_ini" swapped="no"/>
                           </object>
                           <packing>
                             <property name="expand">False</property>
@@ -247,12 +248,6 @@
                                     <property name="width">1</property>
                                     <property name="height">1</property>
                                   </packing>
-                                </child>
-                                <child>
-                                  <placeholder/>
-                                </child>
-                                <child>
-                                  <placeholder/>
                                 </child>
                               </object>
                             </child>
@@ -612,7 +607,7 @@
                                   <object class="GtkLabel" id="label1">
                                     <property name="visible">True</property>
                                     <property name="can_focus">False</property>
-                                    <property name="label" translatable="yes">&lt;b&gt;Utilisateurs&lt;/b&gt;</property>
+                                    <property name="label" translatable="yes">&lt;b&gt;Users&lt;/b&gt;</property>
                                     <property name="use_markup">True</property>
                                   </object>
                                 </child>
@@ -675,7 +670,7 @@
                                   <object class="GtkLabel" id="label13">
                                     <property name="visible">True</property>
                                     <property name="can_focus">False</property>
-                                    <property name="label" translatable="yes">&lt;b&gt;Groupes autorisés&lt;/b&gt;</property>
+                                    <property name="label" translatable="yes">&lt;b&gt;Allowed groups&lt;/b&gt;</property>
                                     <property name="use_markup">True</property>
                                   </object>
                                 </child>
@@ -712,7 +707,7 @@
                                   <object class="GtkLabel" id="label12">
                                     <property name="visible">True</property>
                                     <property name="can_focus">False</property>
-                                    <property name="label" translatable="yes">&lt;b&gt;Sites autorisés&lt;/b&gt;</property>
+                                    <property name="label" translatable="yes">&lt;b&gt;Allowed sites&lt;/b&gt;</property>
                                     <property name="use_markup">True</property>
                                   </object>
                                 </child>
@@ -1273,18 +1268,34 @@ mais la base peut être constituée au chargement à partir du fichier. </proper
                     <property name="can_focus">True</property>
                     <property name="orientation">vertical</property>
                     <child>
-                      <object class="GtkScrolledWindow" id="scrolledwindow3">
-                        <property name="height_request">120</property>
+                      <object class="GtkFrame" id="frame9">
                         <property name="visible">True</property>
-                        <property name="can_focus">True</property>
-                        <property name="vscrollbar_policy">always</property>
-                        <property name="shadow_type">in</property>
+                        <property name="can_focus">False</property>
+                        <property name="label_xalign">0</property>
+                        <property name="shadow_type">none</property>
                         <child>
-                          <object class="GtkTextView" id="firewall_ports">
+                          <object class="GtkScrolledWindow" id="scrolledwindow3">
+                            <property name="height_request">120</property>
                             <property name="visible">True</property>
                             <property name="can_focus">True</property>
-                            <signal name="button-press-event" handler="load_chooser" swapped="no"/>
-                            <signal name="key-release-event" handler="update_tv" swapped="no"/>
+                            <property name="vscrollbar_policy">always</property>
+                            <property name="shadow_type">in</property>
+                            <child>
+                              <object class="GtkTextView" id="firewall_ports">
+                                <property name="visible">True</property>
+                                <property name="can_focus">True</property>
+                                <signal name="button-press-event" handler="load_chooser" swapped="no"/>
+                                <signal name="key-release-event" handler="update_tv" swapped="no"/>
+                              </object>
+                            </child>
+                          </object>
+                        </child>
+                        <child type="label">
+                          <object class="GtkLabel" id="label27">
+                            <property name="visible">True</property>
+                            <property name="can_focus">False</property>
+                            <property name="label" translatable="yes">&lt;b&gt;Ports&lt;/b&gt;</property>
+                            <property name="use_markup">True</property>
                           </object>
                         </child>
                       </object>
@@ -1294,16 +1305,32 @@ mais la base peut être constituée au chargement à partir du fichier. </proper
                       </packing>
                     </child>
                     <child>
-                      <object class="GtkScrolledWindow" id="scrolledwindow7">
+                      <object class="GtkFrame" id="frame8">
                         <property name="visible">True</property>
-                        <property name="can_focus">True</property>
-                        <property name="shadow_type">in</property>
+                        <property name="can_focus">False</property>
+                        <property name="label_xalign">0</property>
+                        <property name="shadow_type">none</property>
                         <child>
-                          <object class="GtkTextView" id="firewall_users">
+                          <object class="GtkScrolledWindow" id="scrolledwindow7">
                             <property name="visible">True</property>
                             <property name="can_focus">True</property>
-                            <signal name="button-press-event" handler="load_chooser" swapped="no"/>
-                            <signal name="key-release-event" handler="update_tv" swapped="no"/>
+                            <property name="shadow_type">in</property>
+                            <child>
+                              <object class="GtkTextView" id="firewall_users">
+                                <property name="visible">True</property>
+                                <property name="can_focus">True</property>
+                                <signal name="button-press-event" handler="load_chooser" swapped="no"/>
+                                <signal name="key-release-event" handler="update_tv" swapped="no"/>
+                              </object>
+                            </child>
+                          </object>
+                        </child>
+                        <child type="label">
+                          <object class="GtkLabel" id="label26">
+                            <property name="visible">True</property>
+                            <property name="can_focus">False</property>
+                            <property name="label" translatable="yes">&lt;b&gt;Users&lt;/b&gt;</property>
+                            <property name="use_markup">True</property>
                           </object>
                         </child>
                       </object>
