--- a/idefix-config.glade
+++ b/idefix-config.glade
@@ -777,7 +777,7 @@
                                           <object class="GtkImage" id="image2">
                                             <property name="visible">True</property>
                                             <property name="can_focus">False</property>
-                                            <property name="pixbuf">data/email-32.png</property>
+                                            <property name="pixbuf">data\email-32.png</property>
                                           </object>
                                           <packing>
                                             <property name="bottom_attach">2</property>
@@ -918,7 +918,7 @@
                                           <object class="GtkImage" id="image1">
                                             <property name="visible">True</property>
                                             <property name="can_focus">False</property>
-                                            <property name="pixbuf">data/internet-32.gif</property>
+                                            <property name="pixbuf">data\internet-32.gif</property>
                                           </object>
                                           <packing>
                                             <property name="bottom_attach">2</property>
@@ -1145,7 +1145,7 @@ Eg: 123 (Monday, Tuesday, Wednesday)</property>
                                               <object class="GtkImage" id="user_summary_email_icon">
                                                 <property name="visible">True</property>
                                                 <property name="can_focus">False</property>
-                                                <property name="pixbuf">data/email-32.png</property>
+                                                <property name="pixbuf">data\email-32.png</property>
                                               </object>
                                               <packing>
                                                 <property name="left_attach">0</property>
@@ -1156,7 +1156,7 @@ Eg: 123 (Monday, Tuesday, Wednesday)</property>
                                               <object class="GtkImage" id="user_summary_internet_icon">
                                                 <property name="visible">True</property>
                                                 <property name="can_focus">False</property>
-                                                <property name="pixbuf">data/internet-32.gif</property>
+                                                <property name="pixbuf">data\internet-32.gif</property>
                                               </object>
                                               <packing>
                                                 <property name="left_attach">0</property>
@@ -1198,46 +1198,54 @@ Eg: 123 (Monday, Tuesday, Wednesday)</property>
                                       </packing>
                                     </child>
                                     <child>
-                                      <object class="GtkTreeView" id="user_summary_tree_view">
+                                      <object class="GtkScrolledWindow">
                                         <property name="visible">True</property>
                                         <property name="can_focus">True</property>
-                                        <property name="model">user_summary_tree_store</property>
-                                        <child internal-child="selection">
-                                          <object class="GtkTreeSelection"/>
-                                        </child>
+                                        <property name="shadow_type">in</property>
                                         <child>
-                                          <object class="GtkTreeViewColumn">
-                                            <property name="title" translatable="yes">Filter Name</property>
-                                            <child>
-                                              <object class="GtkCellRendererText"/>
-                                              <attributes>
-                                                <attribute name="foreground">4</attribute>
-                                                <attribute name="strikethrough">5</attribute>
-                                                <attribute name="text">0</attribute>
-                                              </attributes>
+                                          <object class="GtkTreeView" id="user_summary_tree_view">
+                                            <property name="visible">True</property>
+                                            <property name="can_focus">True</property>
+                                            <property name="model">user_summary_tree_store</property>
+                                            <signal name="key-press-event" handler="summary_warning" swapped="no"/>
+                                            <child internal-child="selection">
+                                              <object class="GtkTreeSelection"/>
                                             </child>
                                             <child>
-                                              <object class="GtkCellRendererPixbuf"/>
-                                              <attributes>
-                                                <attribute name="pixbuf">2</attribute>
-                                              </attributes>
+                                              <object class="GtkTreeViewColumn">
+                                                <property name="title" translatable="yes">Filter Name</property>
+                                                <child>
+                                                  <object class="GtkCellRendererText"/>
+                                                  <attributes>
+                                                    <attribute name="foreground">4</attribute>
+                                                    <attribute name="strikethrough">5</attribute>
+                                                    <attribute name="text">0</attribute>
+                                                  </attributes>
+                                                </child>
+                                                <child>
+                                                  <object class="GtkCellRendererPixbuf"/>
+                                                  <attributes>
+                                                    <attribute name="pixbuf">2</attribute>
+                                                  </attributes>
+                                                </child>
+                                                <child>
+                                                  <object class="GtkCellRendererPixbuf"/>
+                                                  <attributes>
+                                                    <attribute name="pixbuf">3</attribute>
+                                                  </attributes>
+                                                </child>
+                                              </object>
                                             </child>
                                             <child>
-                                              <object class="GtkCellRendererPixbuf"/>
-                                              <attributes>
-                                                <attribute name="pixbuf">3</attribute>
-                                              </attributes>
-                                            </child>
-                                          </object>
-                                        </child>
-                                        <child>
-                                          <object class="GtkTreeViewColumn">
-                                            <property name="title" translatable="yes">Times</property>
-                                            <child>
-                                              <object class="GtkCellRendererText"/>
-                                              <attributes>
-                                                <attribute name="text">1</attribute>
-                                              </attributes>
+                                              <object class="GtkTreeViewColumn">
+                                                <property name="title" translatable="yes">Times</property>
+                                                <child>
+                                                  <object class="GtkCellRendererText"/>
+                                                  <attributes>
+                                                    <attribute name="text">1</attribute>
+                                                  </attributes>
+                                                </child>
+                                              </object>
                                             </child>
                                           </object>
                                         </child>
@@ -1980,7 +1988,6 @@ Eg: 123 (Monday, Tuesday, Wednesday)</property>
                           <object class="GtkEntry" id="proxy_time_condition_days">
                             <property name="visible">True</property>
                             <property name="can_focus">True</property>
-                            <property name="editable">False</property>
                             <property name="invisible_char">●</property>
                             <signal name="key-release-event" handler="update_time" swapped="no"/>
                           </object>
@@ -2142,6 +2149,18 @@ Eg: 123 (Monday, Tuesday, Wednesday)</property>
                             <property name="expand">False</property>
                             <property name="fill">True</property>
                             <property name="position">1</property>
+                          </packing>
+                        </child>
+                        <child>
+                          <object class="GtkLabel" id="firewall_disabled">
+                            <property name="visible">True</property>
+                            <property name="can_focus">False</property>
+                            <property name="label" translatable="yes">Disabled</property>
+                          </object>
+                          <packing>
+                            <property name="expand">True</property>
+                            <property name="fill">True</property>
+                            <property name="position">2</property>
                           </packing>
                         </child>
                       </object>
@@ -2779,7 +2798,7 @@ Eg: 123 (Monday, Tuesday, Wednesday)</property>
       </object>
     </child>
     <child>
-      <object class="GtkMenuItem" id="menuitem3">
+      <object class="GtkMenuItem" id="menu_move_user">
         <property name="visible">True</property>
         <property name="can_focus">False</property>
         <property name="label" translatable="yes">move user to category...</property>
